modif pom